# njterm

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  conanfile.py  main.cpp
cmake/: compile_shaders.cmake  find_dep.cmake
shaders/basic/: basic.frag  basic.vert
shaders/cells/: cells.frag  cells.vert
shaders/guidelines/: guidelines.frag  guidelines.vert
src/njapp/: CMakeLists.txt
src/njapp/include/: nj_app_context.h  nj_app_desc.h  nj_app_handles.h
src/njapp/src/: nj_app_context.cpp  nj_app_desc.cpp
src/njbuf/: CMakeLists.txt  nj_text_buffer.cpp  nj_text_buffer.h
src/njcon/: CMakeLists.txt  njcon.cpp  njcon.h  njlua.cpp  njlua.h  njluaexc.h  njlualog.h  njluastate.cpp  njluastate.h  njluautils.cpp  njluautils.h  njluavalue.cpp  njluavalue.h
src/njcon/tests/: lua_con.cpp  lua_push.cpp  lua_state.cpp
src/njft/: CMakeLists.txt
src/njft/include/: nj_ft_atlas.h  nj_ft_library.h  nj_ft_structs.h
src/njft/include/internals/: nj_ft_error.h  nj_ft_log.h
src/njft/src/: nj_ft_atlas.cpp  nj_ft_library.cpp
src/njimg/: CMakeLists.txt
src/njlog/: CMakeLists.txt  nj_log_char.h  nj_log_scope.h  njlog.h
src/njpt/: CMakeLists.txt  njpt.cpp  njpt.h
src/njvk/: CMakeLists.txt  nj_vk_build.h  nj_vk_handles.h  njglfw.cpp  njglfw.h  njkey.h  njvk.cpp  njvk.h  njvklog.h  njvkutils.cpp  njvkutils.h  njwin.cpp  njwin.h
src/njvk/handles/: nj_builder.cpp  nj_builder.h  nj_physical_device.h  nj_swapchain.cpp  nj_swapchain.h  nj_vk_instance.cpp  nj_vk_instance.h
src/njvk/handles/builders/: nj_build_debug_messanger.cpp  nj_build_debug_messanger.h  nj_build_device.cpp  nj_build_device.h  nj_build_instance.cpp  nj_build_instance.h  nj_build_physical_device.cpp  nj_build_physical_device.h  nj_build_swap_chain.cpp  nj_build_swap_chain.h
src/njvk/include/: nj_builder.h  nj_handle.h
src/njvk/include/handles/: nj_allocator.h  nj_attachment.h  nj_attachment_color.h  nj_buffer.h  nj_build_command_pool.h  nj_build_debug_messanger.h  nj_build_device.h  nj_build_framebuffer.h  nj_build_instance.h  nj_build_physical_device.h  nj_build_render_context.h  nj_build_render_pass.h  nj_build_swapchain.h  nj_command_buffer.h  nj_command_pool.h  nj_debug_utils_messenger.h  nj_descriptor.h  nj_descriptor_cells.h  nj_descriptor_context.h  nj_descriptor_grid.h  nj_descriptor_set.h  nj_descriptor_test.h  nj_descriptor_texture.h  nj_descriptor_texture_array.h  nj_device.h  nj_grid_render_pass.h  nj_image.h  nj_image_view.h  nj_instance.h  nj_physical_device.h  nj_pipeline.h  nj_pipeline_cells.h  nj_pipeline_guidelines.h  nj_render_context.h  nj_render_pass.h  nj_render_sync.h  nj_sampler.h  nj_surface.h  nj_swapchain.h  nj_vertex.h  (+1 more)
src/njvk/src/: nj_allocator.cpp  nj_attachment.cpp  nj_attachment_color.cpp  nj_buffer.cpp  nj_build_command_pool.cpp  nj_build_debug_messanger.cpp  nj_build_device.cpp  nj_build_framebuffer.cpp  nj_build_instance.cpp  nj_build_physical_device.cpp  nj_build_render_context.cpp  nj_build_render_pass.cpp  nj_build_swapchain.cpp  nj_builder.cpp  nj_command_buffer.cpp  nj_command_pool.cpp  nj_debug_utils_messenger.cpp  nj_descriptor.cpp  nj_descriptor_cells.cpp  nj_descriptor_context.cpp  nj_descriptor_grid.cpp  nj_descriptor_set.cpp  nj_descriptor_test.cpp  nj_descriptor_texture.cpp  nj_descriptor_texture_array.cpp  nj_device.cpp  nj_grid_render_pass.cpp  nj_image.cpp  nj_image_view.cpp  nj_instance.cpp  nj_physical_device.cpp  nj_pipeline.cpp  nj_pipeline_cells.cpp  nj_pipeline_guidelines.cpp  nj_render_context.cpp  nj_render_pass.cpp  nj_render_sync.cpp  nj_sampler.cpp  nj_surface.cpp  nj_swapchain.cpp  (+1 more)
src/njvk/tests/: instance.cpp
src/njwin/: CMakeLists.txt  njwin.cpp
src/njwin/include/: njkey.h  njwin.h
src/njwin/internal/: njglfw.cpp  njglfw.h
